feat: adicionado endpoint para listar logs do webhook
